# msc_thesis

./: .env  .gitignore  2021_05_07_DQN_LunarLander.ipynb  2021_05_07_dqn_lunarlander.py  AGENTS.md  GEMINI.md  README.md  distribution_shift.py  dqn_agent.py  main.py  pyproject.toml  shift_wrappers.py
notebooks/: conformal_prediction.ipynb  cp_adaptive_regression.ipynb  cp_classification.ipynb  cp_regression.ipynb  frozen_lake_testing.ipynb  mdp_test.ipynb  simple_mdp.py
notebooks/cartpole/: cartpole.ipynb  ccnn.py  cli.py  count_model_params.py  coverage.py  coverage_test.py  cql_training_test.py  cqldqn.py  cqldqn_1.py  cqldqn_2.py  discretisation_comparison.py  discretisation_experiment.py  discretisation_visualisation.py  discretise.py  experiment_params.yml  final_plots.ipynb  inference_overhead.py  plot.ipynb  robustness_experiment.pkl  robustness_plot.py  state_occupancy.ipynb  test_kernel_idea.py  testime_robustness.py  tile_coding.py  traintime_robustness.py  tree-tuning.py
notebooks/cp_generic/: cp_adaptive_regression.ipynb  cp_classification.ipynb  cp_regression.ipynb
notebooks/experiments/: acrobot_test.ipynb  coverage_test.py  discretisation_experiment.py  discretisation_visualisation.py  final_plots.ipynb  hparam_tuner.py  inference_overhead.py  occupancy_gif.py  optimal_policies.py  optimal_policy_plots.ipynb  optuna_tuner.py  state_occupancy.ipynb  test_kernel_idea.py  testime_robustness.py  tile_coding.py  traintime_robustness.py
notebooks/frozen_lake/: discrete_cp_test.ipynb  distribution_shift.py  distribution_shift_debugger.py  frozen_lake_interactive_debugger.py  frozen_lake_testing.ipynb  slip_probs.py
notebooks/lunar_lander/: lunar_lander_testing.ipynb
notebooks/schematics/: cartpole_distributionshift.ipynb  coverage_split.ipynb  cql.ipynb  discretisation_schemes.ipynb
notebooks/simple_mdp/: agent.py  env.py  mdp_debug.py  simple_mdp.py
results/acrobot/acrobot_optimal_policies/: optimal_summary.tsv
results/figures/: flowchart.drawio  flowchartv2.drawio
src/crl/: buffer.py  calib.py  ccnn.py  env.py
src/crl/agent/: discrete.py  tabular.py
src/crl/cons/: cql.py  (+6 more)
(+48 files in other folders)
