[project]
name = "msc-thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "box2d>=2.3.10",
    "distrax>=0.1.5",
    "einops>=0.8.1",
    "flax>=0.10.6",
    "gymnasium>=1.1.1",
    "imageio>=2.37.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jax>=0.6.1",
    "joblib>=1.5.1",
    "matplotlib>=3.10.3",
    "mujoco>=3.3.5",
    "opencv-python>=4.12.0.88",
    "optax>=0.2.4",
    "packaging>=25.0",
    "pandas>=2.3.0",
    "pyfixedreps-andnp==4.1.2",
    "pygame>=2.6.1",
    "pytest>=8.4.1",
    "rliable>=1.2.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "stable-baselines3>=2.7.0",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "wandb>=0.20.1",
]
